--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.done {
+  text-decoration: line-through;
+}
+
+.widthRow {
+  width: 100px;
+}
